--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "backend.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon backend.js",
     "start": "node backend.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Henri Forss",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.2"
   }
 }
