add tests to pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,7 @@ jobs:
           npm install
       - name: Lint project
         run: npm run lint
+      - name: Run tests
+        run: |
+          cd frontend
+          npm run test
