--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,5 +32,6 @@ jobs:
       - name: Run Cypress e2e tests
         uses: cypress-io/github-action@v5
         with:
+          command: npm run test:e2e
           start: npm run start
           browser: chrome
