--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Install backend deps
         run: npm install
       - name: Install frontend deps
