--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,8 @@ jobs:
           pnpm test
       - name: Run Cypress e2e tests
         uses: cypress-io/github-action@v5
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
         with:
           command: pnpm test:e2e
           start: pnpm start
