--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           cd frontend
           pnpm test
-      - name: Run Cypress e2e tests
+      - name: Run cypress e2e tests
         uses: cypress-io/github-action@v5
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
