--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,6 +44,8 @@ jobs:
   tag_release:
     needs: test_pipeline
     runs-on: ubuntu-20.04
+    permissions:
+      contents: write
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
     steps:
       - uses: actions/checkout@v3
