--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --outDir ../dist",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest"
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.6.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite": "^5.0.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.6",
@@ -22,7 +23,6 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "jsdom": "^23.0.1",
-    "vite": "^5.0.8",
     "vitest": "^1.1.1"
   }
 }
