--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,7 +57,7 @@ jobs:
           DEFAULT_BUMP: patch
 
   deploy_project:
-    needs: test_project
+    needs: tag_release
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
     steps:
