--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -80,5 +80,18 @@ jobs:
           text: Phonebook is healthy
           description: All is well with https://full-stack-open-phonebook-cicd.fly.dev
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK}}
+
+  nofity_on_fail:
+    needs: [test_project, tag_release, deploy_project]
+    runs-on: ubuntu-20.04
+    if: ${{ github.event_name == 'push' && failure()}}
+    steps:
+      - name: Notify Discord if deploy fails
+        uses: rjstone/discord-webhook-notify@v1
+        with:
+          severity: error
+          text: Build failed
+          description: User ${{ github.event.head_commit.author.username }} broke the build with ${{ github.event.head_commit.url }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK}}
 # notifications
 # health checks
