--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: "20.5.1"
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: "8.6.12"
       - name: Install backend deps
         run: pnpm install
       - name: Install frontend deps
