--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -1,6 +1,9 @@
 name: Health check
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: "0,5,10,15,20,25,30,35,40,45,50,55 * * * *" # uncomment this to activate schedule
 
