--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -3,7 +3,7 @@ name: Health check
 on:
   push:
     branches:
-      - main
+      - devdev # Change to "dev" to activate this workflow
 #  schedule:
 #    - cron: "0,5,10,15,20,25,30,35,40,45,50,55 * * * *" # uncomment this to activate schedule
 
